able to submit jobs. now hitting ICM though

--- a/singularity_0806_gpt2_345m.yaml
+++ b/singularity_0806_gpt2_345m.yaml
@@ -2,7 +2,7 @@ description: SSH Singularity
 
 target:
   service: sing
-  name: aims-sing-a100-wus3 #GenAI-Shared-UKSouth #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth # aims-sing-res-wus3-02 #aims-sing-a100-wus3
+  name: GenAI-Shared-UKSouth #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth # aims-sing-res-wus3-02 #aims-sing-a100-wus3
   workspace_name: synthetic-datagen-ws-wus3
 
 environment:
@@ -42,13 +42,17 @@ storage:
     container_name: azureml-blobstore-b4c46be1-7692-48a4-afd0-b6734d6c4b67
     mount_dir: /mnt/outputsynth
 
+env_defaults:
+  SEQ_LENGTH: 1024
+  MAX_POSITION_EMBEDDINGS: 1024
+
 jobs:
-- name: megatron_lm_gpt2_345m
+- name: megatron_lm_gpt2_345m_${MAX_POSITION_EMBEDDINGS}
   sla_tier: premium  # Default: premium
   execution_mode: basic  # Default: basic
   # sku: G1
-  sku: G4
-  # sku: G8
+  # sku: G4
+  sku: G8
   # sku: 40000000000G8
   # sku: 40G1-A100
   # sku: 40G8-A100-NvLink
@@ -58,4 +62,10 @@ jobs:
   process_count_per_node: 1
   command:
     - export PATH=$$HOME/.local/bin/:$$PATH
-    - bash run_01_pretrain_gpt2_345m_1GPU.sh
+    - export OUTPUT_DIR=$$AMLT_OUTPUT_DIR/
+    - export SEQ_LENGTH=$SEQ_LENGTH
+    - export MAX_POSITION_EMBEDDINGS=$MAX_POSITION_EMBEDDINGS
+    # - bash run_01_pretrain_gpt2_345m_1GPU.sh
+    # - bash run_02_pretrain_gpt2_345m_8GPU.sh
+    # - bash run_03_pretrain_gpt2_345m_8GPU_env.sh
+    - bash run_03_a_pretrain_gpt2_345m_1GPU_env.sh
