--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
+            "name": "pretrain_gpt_torchrun",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/usr/local/bin/torchrun",
+            "justMyCode": false,
+            "console": "integratedTerminal",
+            "env": {
+                "CUDA_DEVICE_MAX_CONNECTIONS": "1",
+                "MASTER_ADDR": "localhost",
+                "MASTER_PORT": "6000",
+                "NUM_NODES": "1",
+                "NODE_RANK": "0",
+                "WORLD_SIZE": "1"
+            },
+            "args": [
+                "${workspaceFolder}/pretrain_gpt.py",
+                "--num-layers", "24",
+                "--hidden-size", "1024",
+                "--num-attention-heads", "16",
+                "--seq-length", "1024",
+                "--max-position-embeddings", "1024",
+                "--micro-batch-size", "4",
+                "--vocab-file", "./gpt2-vocab.json",
+                "--merge-file", "./gpt2-merges.txt",
+                "--train-iters", "100",
+            ]
+        },
+        {
+            "name": "pretrain_gpt",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
@@ -13,47 +41,26 @@
             "justMyCode": false,
             "cwd": "${fileDirname}",
             "env": {
-                "CUDA_DEVICE_MAX_CONNECTIONS": "1"
+                "CUDA_DEVICE_MAX_CONNECTIONS": "1",
             },
             "args": [
-                "--num-layers", "24",
-                "--hidden-size", "1024",
-                "--num-attention-heads", "16",
-                "--seq-length", "1024",
-                "--max-position-embeddings", "1024",
-                "--micro-batch-size", "4",
-                "--global-batch-size", "8",
-                "--train-iters", "500000",
-                "--weight-decay", "0.1",
-                "--adam-beta1", "0.9",
-                "--adam-beta2", "0.95",
-                "--init-method-std", "0.006",
-                "--clip-grad", "1.0",
-                "--fp16",
-                "--lr", "0.00015",
-                "--lr-decay-style", "cosine",
-                "--min-lr", "6.0e-6",
-                "--lr-warmup-fraction", ".001",
-                "--lr-decay-iters", "430000",
-                "--data-path", "my-gpt2_text_document",
-                "--vocab-file", "./gpt2-vocab.json",
-                "--merge-file", "./gpt2-merges.txt",
-                "--split", "949,50,1",
-                "--log-interval", "100",
-                "--save-interval", "10000",
-                "--eval-interval", "1000",
-                "--save", ".",
-                "--load", ".",
-                "--eval-iters", "10",
-                "--tensorboard-dir", "."
+                "--num-layers",
+                "24",
+                "--hidden-size",
+                "1024",
+                "--num-attention-heads",
+                "16",
+                "--seq-length",
+                "1024",
+                "--max-position-embeddings",
+                "1024",
+                "--micro-batch-size",
+                "4",
+                "--vocab-file",
+                "./gpt2-vocab.json",
+                "--merge-file",
+                "./gpt2-merges.txt",
             ]
-
-        },
-        {
-            "name": "Python Debugger: Module",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "torchrun_pretrain_gpt"
         }
     ]
 }
