--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,9 +27,30 @@
                 "--seq-length", "1024",
                 "--max-position-embeddings", "1024",
                 "--micro-batch-size", "4",
+                "--global-batch-size", "8",
+                "--train-iters", "500000",
+                "--weight-decay", "0.1",
+                "--adam-beta1", "0.9",
+                "--adam-beta2", "0.95",
+                "--init-method-std", "0.006",
+                "--clip-grad", "1.0",
+                "--fp16",
+                "--lr", "0.00015",
+                "--lr-decay-style", "cosine",
+                "--min-lr", "6.0e-6",
+                "--lr-warmup-fraction", ".001",
+                "--lr-decay-iters", "430000",
+                "--data-path", "my-gpt2_text_document",
                 "--vocab-file", "./gpt2-vocab.json",
                 "--merge-file", "./gpt2-merges.txt",
-                "--train-iters", "100",
+                "--split", "949,50,1",
+                "--log-interval", "100",
+                "--save-interval", "10000",
+                "--eval-interval", "1000",
+                "--save", ".",
+                "--load", ".",
+                "--eval-iters", "10",
+                "--tensorboard-dir", "./tensorboard_logs/001"
             ]
         },
         {
