--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 tensorboard_logs/
 my-gpt2_text_document/
 events.out.tfevents.*
+
+# folder contains preprocessed data.
+my_long_corpus/ 
+
+# folder havent been able to delete.
+long_corpus_gpt2/ 
+
+
 __pycache__
 *.so
 build
