--- a/singularity_05_gpt_long_context.yaml
+++ b/singularity_05_gpt_long_context.yaml
@@ -2,7 +2,7 @@ description: SSH Singularity
 
 target:
   service: sing
-  name: aims-sing-a100-wus3 #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth # aims-sing-res-wus3-02 #aims-sing-a100-wus3
+  name: GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth #GenAI-Shared-UKSouth #aims-sing-a100-wus3 #GenAI-Shared-UKSouth # aims-sing-res-wus3-02 #aims-sing-a100-wus3
   workspace_name: synthetic-datagen-ws-wus3
 
 environment:
@@ -31,6 +31,8 @@ code:
   # local directory of the code. this will be uploaded to the server.
   # $CONFIG_DIR is expanded to the directory of this config file
   local_dir: $CONFIG_DIR
+  ignore:
+  - my_long_corpus/*
 
 storage:
   synthdatastore:
@@ -44,34 +46,26 @@ storage:
 
 env_defaults:
   # ===== GPUS_PER_NODE =====
-  G: 4
-  # G: 8
+  # G: 4
+  G: 8
   # ====== HIDDEN_SIZE =======
-  H: 1024
-  # H: 3072
+  # H: 1024
+  H: 3072
   # ====== SEQ_LENGTH =========
   # S: 1024
   # S: 2048
-  S: 4096
+  # S: 4096
   # S: 8192
   # S: 16384
   # S: 32768
   # S: 65536
   # S: 131072
-  # ======= MAX_POSITION_EMBEDDINGS ======
-  E: 4096
-  # E: 8192
-  # E: 16384
-  # E: 32768
-  # E: 65536
-  # E: 131072
-  # E: 262144
-  # E: 524288
-  # E: 1048576
+  S: 262144
+
 
 
 jobs:
-- name: megatron_lm_gpt_G${G}_H${H}_S${S}_E${E}
+- name: megatron_lm_gpt_G${G}_H${H}_S${S}
   sla_tier: premium  # Default: premium
   execution_mode: basic  # Default: basic
   # sku: G1
@@ -89,10 +83,15 @@ jobs:
     - export OUTPUT_DIR=$$AMLT_OUTPUT_DIR/
     - export HIDDEN_SIZE=$H
     - export SEQ_LENGTH=$S
-    - export MAX_POSITION_EMBEDDINGS=$E
-    - export MAX_POSITION_EMBEDDINGS=$E
+    - export MAX_POSITION_EMBEDDINGS=$S
     - export GPUS_PER_NODE=$G
+    - export DATA_DIR=/mnt/synthdatastore/agoswami/my_long_corpus
+    - ls -lh $$DATA_DIR/
     # - bash run_03_a_pretrain_gpt2_345m_1GPU_env.sh
     # - bash run_03_b_pretrain_gpt2_345m_4GPU_env.sh
     # - bash run_03_c_pretrain_gpt2_345m_8GPU_env.sh
-    - bash run_03_d_pretrain_gpt.sh
+    # - bash run_03_d_pretrain_gpt.sh
+    # - bash run_03_f_pretrain_gpt_long_context.sh
+    # - bash run_03_g_pretrain_gpt_long_context.sh
+    # - bash run_04_pretrain_gpt_long_context.sh
+    - bash run_05_pretrain_gpt_long_context_bs1.sh
