--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,14 +21,19 @@
             },
             "args": [
                 "${workspaceFolder}/pretrain_gpt.py",
+                "--transformer-impl", "transformer_engine",
+                "--normalization", "RMSNorm",
                 "--num-layers", "24",
-                "--hidden-size", "1024",
+                "--hidden-size", "128",
                 "--num-attention-heads", "16",
-                "--seq-length", "1024",
-                "--max-position-embeddings", "1024",
-                "--micro-batch-size", "4",
-                "--global-batch-size", "8",
-                "--train-iters", "500000",
+                "--seq-length", "128",
+                "--max-position-embeddings", "128",
+                "--position-embedding-type", "rope",
+                "--rotary-percent", "1.0",
+                "--rotary-base", "1000000",
+                "--swiglu",
+                "--micro-batch-size", "1",
+                "--train-iters", "256",
                 "--weight-decay", "0.1",
                 "--adam-beta1", "0.9",
                 "--adam-beta2", "0.95",
@@ -39,8 +44,14 @@
                 "--lr-decay-style", "cosine",
                 "--min-lr", "6.0e-6",
                 "--lr-warmup-fraction", ".001",
-                "--lr-decay-iters", "430000",
-                "--data-path", "my-gpt2_text_document",
+                "--lr-decay-iters", "256",
+                "--use-flash-attn",
+                "--attention-dropout", "0.1",
+                "--use-distributed-optimizer",
+                "--context-parallel-size", "1",
+                "--tensor-model-parallel-size", "1",
+                "--pipeline-model-parallel-size", "1",
+                "--data-path", "/mnt/synthdatastore/agoswami/my_long_corpus/my_long_corpus_128_gpt2_text_document",
                 "--vocab-file", "./gpt2-vocab.json",
                 "--merge-file", "./gpt2-merges.txt",
                 "--split", "949,50,1",
@@ -49,38 +60,9 @@
                 "--eval-interval", "1000",
                 "--save", ".",
                 "--load", ".",
-                "--eval-iters", "10",
+                "--eval-iters", "0",
+                // "--eval-iters", "10",
                 "--tensorboard-dir", "./tensorboard_logs/001"
-            ]
-        },
-        {
-            "name": "pretrain_gpt",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "cwd": "${fileDirname}",
-            "env": {
-                "CUDA_DEVICE_MAX_CONNECTIONS": "1",
-            },
-            "args": [
-                "--num-layers",
-                "24",
-                "--hidden-size",
-                "1024",
-                "--num-attention-heads",
-                "16",
-                "--seq-length",
-                "1024",
-                "--max-position-embeddings",
-                "1024",
-                "--micro-batch-size",
-                "4",
-                "--vocab-file",
-                "./gpt2-vocab.json",
-                "--merge-file",
-                "./gpt2-merges.txt",
             ]
         }
     ]
