--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ events.out.tfevents.*
 iter_*
 latest_checkpointed_iteration.txt
 output_logs
+nohup.out
 
 # folder contains preprocessed data.
 my_long_corpus/ 
