single node works fine as well

--- a/singularity_06_gpt_long_context_amlt_tp_cp.yaml
+++ b/singularity_06_gpt_long_context_amlt_tp_cp.yaml
@@ -48,7 +48,8 @@ storage:
 
 env_defaults:
   # ===== NUM_NODES =====
-  NN: 2
+  NN: 1
+  # NN: 2
   # ===== GPUS_PER_NODE =====
   # G: 4
   G: 8
@@ -63,12 +64,12 @@ env_defaults:
   # S: 16384
   # S: 32768
   # S: 65536
-  # S: 131072
-  S: 262144
+  S: 131072
+  # S: 262144
   # S: 524288
   # S: 1048576
   # ====== TP / CP =========
-  TP: 8
+  TP: 4
   CP: 2
 
 
@@ -76,8 +77,8 @@ jobs:
 - name: megatron_lm_gpt_NN${NN}_G${G}_H${H}_S${S}_TP${TP}_CP${CP}
   sla_tier: premium  # Default: premium
   execution_mode: basic  # Default: basic
-  # sku: ${NN}x80G${G}
-  sku: ${NN}x80G${G}-A100-IB-NvLink
+  sku: ${NN}x80G${G}
+  # sku: ${NN}x80G${G}-A100-IB-NvLink # use for multinode
   # sku: ${NN}x80G${G}-A100-NvLink
   # sku: G1
   # sku: 80G${G}
